--- a/UnityECS_10000Monster/Assembly-CSharp.csproj
+++ b/UnityECS_10000Monster/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
+    <None Include="Assets\Art\FBX\F203_Chili_New\F203_Chili_Anim.txt" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\6000.0.40f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
@@ -407,23 +408,23 @@
     <Reference Include="UnityEditor.XRModule">
       <HintPath>C:\Program Files\Unity\Hub\Editor\6000.0.40f1\Editor\Data\Managed\UnityEngine\UnityEditor.XRModule.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Cecil.Awesome">
+      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\PackageCache\com.unity.entities@b749ad90954b\Unity.Entities.CodeGen\Unity.Cecil.Awesome.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.Collections.LowLevel.ILSupport">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\PackageCache\com.unity.collections@9922678e06a0\Unity.Collections.LowLevel.ILSupport\Unity.Collections.LowLevel.ILSupport.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\PackageCache\com.unity.ext.nunit@60ef35ffd3cd\net40\unity-custom\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="System.IO.Hashing">
+      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\PackageCache\com.unity.collections@9922678e06a0\Unity.Collections.Tests\System.IO.Hashing\System.IO.Hashing.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\PackageCache\com.unity.visualscripting@1b53f46e931b\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Cecil">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\PackageCache\com.unity.nuget.mono-cecil@d78732e851eb\Mono.Cecil.dll</HintPath>
-    </Reference>
-    <Reference Include="System.IO.Hashing">
-      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\PackageCache\com.unity.collections@9922678e06a0\Unity.Collections.Tests\System.IO.Hashing\System.IO.Hashing.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Cecil.Awesome">
-      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\PackageCache\com.unity.entities@b749ad90954b\Unity.Entities.CodeGen\Unity.Cecil.Awesome.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.CompilerServices.Unsafe">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\PackageCache\com.unity.collections@9922678e06a0\Unity.Collections.Tests\System.Runtime.CompilerServices.Unsafe\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
@@ -794,11 +795,8 @@
     <Reference Include="System.Xml.Serialization">
       <HintPath>C:\Program Files\Unity\Hub\Editor\6000.0.40f1\Editor\Data\NetStandard\compat\2.1.0\shims\netfx\System.Xml.Serialization.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Entities.Editor">
-      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.Entities.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Entities">
-      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.Entities.dll</HintPath>
+    <Reference Include="Unity.RenderPipelines.Universal.2D.Runtime">
+      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.RenderPipelines.Universal.2D.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.InputSystem.ForUI">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.InputSystem.ForUI.dll</HintPath>
@@ -890,17 +888,14 @@
     <Reference Include="Unity.Serialization.Editor">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.Serialization.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Collections.Editor">
-      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.Collections.Editor.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.Entities.Hybrid">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.Entities.Hybrid.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Collections.Editor">
+      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.Collections.Editor.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.Profiling.Core">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.Profiling.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
-      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Shared.Editor">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.VisualScripting.Shared.Editor.dll</HintPath>
@@ -928,6 +923,9 @@
     </Reference>
     <Reference Include="Unity.Transforms">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.Transforms.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
+      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
@@ -989,14 +987,17 @@
     <Reference Include="Unity.Entities.Editor.Properties">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.Entities.Editor.Properties.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.Runtime">
-      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.RenderPipelines.Core.Runtime.dll</HintPath>
+    <Reference Include="Unity.Entities.UI">
+      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.Entities.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Entities">
+      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.Entities.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Flow">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.VisualScripting.Flow.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Entities.UI">
-      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.Entities.UI.dll</HintPath>
+    <Reference Include="Unity.RenderPipelines.Core.Runtime">
+      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.RenderPipelines.Core.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rendering.LightTransport.Runtime">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.Rendering.LightTransport.Runtime.dll</HintPath>
@@ -1004,8 +1005,8 @@
     <Reference Include="Unity.InputSystem">
       <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.InputSystem.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.RenderPipelines.Universal.2D.Runtime">
-      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.RenderPipelines.Universal.2D.Runtime.dll</HintPath>
+    <Reference Include="Unity.Entities.Editor">
+      <HintPath>D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\ScriptAssemblies\Unity.Entities.Editor.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
