--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 UnityECS_10000Monster/UserSettings
 UnityECS_10000Monster/Logs
 UnityECS_10000Monster/Temp
+UnityECS_10000Monster/.idea
+UnityECS_10000Monster/obj
