--- a/UnityECS_10000Monster/Assembly-CSharp.csproj
+++ b/UnityECS_10000Monster/Assembly-CSharp.csproj
@@ -58,7 +58,11 @@
     <Analyzer Include="D:\git_upwork\unity_6_demo\UnityECS_10000Monster\Library\PackageCache\com.unity.entities@b749ad90954b\Unity.Entities\SourceGenerators\Unity.Entities.Analyzer.CodeFixes.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Code\102_IComponentData\MonsterSpawn_Data.cs" />
+    <Compile Include="Assets\Code\103_ISystem\MonsterMove_System.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
+    <Compile Include="Assets\Code\105_Authoring\MonsterSpawn_Authoring.cs" />
+    <Compile Include="Assets\Code\103_ISystem\MonsterSpawn_System.cs" />
     <None Include="Assets\Art\FBX\F203_Chili_New\F203_Chili_Anim.txt" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\6000.0.40f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
