--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ UnityECS_10000Monster/Logs
 UnityECS_10000Monster/Temp
 UnityECS_10000Monster/.idea
 UnityECS_10000Monster/obj
+UnityECS_10000Monster/Assets/SceneDependencyCache
+UnityECS_10000Monster/Assets/SceneDependencyCache.meta
